@@ -1,8 +1,6 @@
 package io.github.luversof.boot.autoconfigure.mongo.config;
 
 
-import java.util.stream.Collectors;
-
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.boot.autoconfigure.AutoConfiguration;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnClass;
@@ -39,7 +37,7 @@ public class MongoAutoConfiguration {
 	@Bean
 	@Primary
 	public MongoClient emptyMongoClient(ObjectProvider<MongoClientSettingsBuilderCustomizer> builderCustomizers, MongoClientSettings settings) {
-		return new MongoClientFactory(builderCustomizers.orderedStream().collect(Collectors.toList())).createMongoClient(settings);
+		return new MongoClientFactory(builderCustomizers.orderedStream().toList()).createMongoClient(settings);
 	}
 
 }
